--- a/index.html
+++ b/index.html
@@ -23,23 +23,24 @@
 
 <body>
 <div class ="game">
-     <canvas class="Heat" id="Heat_2D_canvas" width="600" height="600"></canvas>
-    <br>
+  <canvas class="Heat" id="Heat_2D_canvas" width="600" height="600"></canvas>
+  
 
-   <input class="button57" type="button"  value="Пауза/Старт"/><button class="button-57" role="button" id="button_pause"><span class="text">Button 57</span><span>Alternate text</span></button>
-    <input class="button57" type="button" id="button_clear" value="Очистить"/>
-<br>
-<table class="control">
-  <caption> Управление </caption>
-    <tr>
-      <th>Левая кнопка мыши - нагреть область
-      <th>Средняя кнопка мыши - придать области нормальную температуру</th>
-      <th>Правая кнопка мыши - охладить область</th>
-    </tr>
-</table>
 </div>
 
+<table class="control">
+  <tr>
+    <th>Левая кнопка мыши - нагреть область
+    <th>Средняя кнопка мыши - придать области нормальную температуру</th>
+    <th>Правая кнопка мыши - охладить область</th>
+  </tr>
+</table>
 
+  <div id="presets">
+    <input class="knopki" type="button" id="button_pause" value="Пауза/Старт"/>
+    <input class="knopki" type="button" id="button_clear" value="Очистить"/>
+  </div>
+<br>
 
 
 
