--- a/index2.html
+++ b/index2.html
@@ -21,12 +21,18 @@
 </nav>
 
 <body>
+
 <div class ="game">
-     <canvas id="Heat_2D_canvas" width="650" height="650" style="border:10px solid #000000; border-radius:7px; margin-bottom: -5px"></canvas>
-    <br><br><br>
-    <input  type="button" id="button_pause" value="Пауза/Старт"/>
-    <input type="button" id="button_clear" value="Очистить"/>
+  <canvas class="Heat" id="Heat_2D_canvas" width="600" height="600"></canvas>
 </div>
+<div class ="by">
+  <input  type="button" id="button_pause" value="Пауза/Старт"/>
+    <input type="button" id="button_clear" value="Очистить"/>
+
+</div>
+
+
+
 </body>
 
 
