--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <nav class="menu">
 <li><a href="index.html">Игра</a></li>
-<li><a href="index2.html">С заданными значениями</a></li>
+<li><a href="index4.html">Численное решение</a></li>
 <li><a href="index3.html">1D Решение</a></li>
 <li><a href="#">Контакты</a></li>
 <li><div class="showtime"> Время <div id="clock"></div></li>
@@ -24,7 +24,7 @@
 <body>
 <div class ="game">
   <canvas class="Heat" id="Heat_2D_canvas" width="600" height="600"></canvas>
-  
+
 
 </div>
 
