--- a/index3.html
+++ b/index3.html
@@ -12,7 +12,7 @@
 
 <nav class="menu">
 <li><a href="index.html">Игра</a></li>
-<li><a href="index2.html">С заданными значениями</a></li>
+<li><a href="index4.html">Численное решение</a></li>
 <li><a href="index3.html">1D Решение</a></li>
 <li><a href="#">Контакты</a></li>
 <li><div class="showtime"> Время <div id="clock"></div></li>
