--- a/index4.html
+++ b/index4.html
@@ -1,26 +1,104 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
+
 <head> 
-	<meta charset="UTF-8">
+
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Курсовая работа 131-МКо</title>
-  <link rel="stylesheet" href="./css/test.css">
+  <link rel="stylesheet" href="./css/site.css">
   <link rel="icon" href="Img/favicon.ico">
   <script src="./scripts/jscript1.js"> </script>
-  <script src="./scripts/Heat_2D.js"> </script>
+  <script src="./scripts/Heat_2D_static.js"> </script>
 </head>
 
-<body>
-<a href="#" class="btn-liquid">
-    <span class="inner">Liquid button ?</span>
-</a>
-<script src='https://code.jquery.com/jquery-3.2.1.min.js'></script> <script src="./scripts/liquidbutton.js"> </script>
-</div>
 
+<nav class="menu">
+<li><a href="index.html">Игра</a></li>
+<li><a href="index2.html">Численное решение</a></li>
+<li><a href="index3.html">1D Решение</a></li>
+<li><a href="#">Контакты</a></li>
+<li><div class="showtime"> Время <div id="clock"></div></li>
 
+</nav>
 
+<body style="background-color: black;color: aliceblue;">
+    <div style="float: left; margin-left: 10px;">
+        <table> 
+               <th > Численное решение уравнения тепопроводности </th>
+            </tr>
+            <tr>
+                <td style="padding-right: 65px;vertical-align: top;" class="controls">
+                    T1:<br>
+                    <input id="ctlT1" type="range" min="0" max="1" step="0.05" value="1">
+                    <hr>
+                    T2:<br>
+                    <input id="ctlT2" type="range" min="0" max="1" step="0.05" value="0">
+                    <hr>
+                    T3:<br>
+                    <input id="ctlT3" type="range" min="0" max="1" step="0.05" value="0.15">
+                    <hr>
+                    T4:<br>
+                    <input id="ctlT4" type="range" min="0" max="1" step="0.05" value="0">
+                    <hr>
+                    Число итераций:<br>
+                    <input id="ctlIteration" type="range" min="100" max="2000" step="1" value="1000">
+                    <hr>
+                    Разрешение:<br>
+                    <input id="ctlResulation" type="range" min="0" max="45" step="1" value="45">
+                    <hr>
+                    Проводимость (c):<br>
+                    <input id="ctlConductivity" type="range" min="0.01" max="0.25" step="0.01" value="0.25">
+                    <hr>
 
+                </td>
+                <td>
+                    <table>
+                        <tr>
+                            <td width="100" ></td>
+                            <td>
 
+                                Slide browse solution => Time : <input id="ctlTime" type="range" min="0" max="999"
+                                    step="1" value="0" oninput="config.autoPlay=false;DrawSolution(this.value)">
+    </div>
+    </td>
+    <td>
+        <span id="ctlInfo">Calculating... </span>
+    </td>
+    </tr>
+    <tr>
+        <td></td>
+        <td id="T2C" style="text-align: center;"> T2 </td>
+        <td></td>
+    </tr>
+    <tr>
+        <td id="T1C"> T1</td>
+        <td><canvas id="board" width="500" height="500" style="border: 1px solid;"></canvas></td>
+        <td id="T3C">T3</td>
+    </tr>
+    <tr>
+        <td></td>
+        <td id="T4C" style="text-align: center;"> T4 </td>
+        <td></td>
+    </tr>
+    </table>
+    </td>
+    <td style="vertical-align: top;"> 
+        <img width="450" src="https://diwsi.github.io/2DHeatEquation/eq.PNG" /><br>
+        <ul>
+            <li>c: Теплопроводимость</li>
+            <li>u: Решение</li>
+            <li>t: Время </li>
+            <li>x,y: Координаты </li>
+        </ul>
+        <br>
+        
+    </td>
+    </tr>
+    </table>
 
+    </div>
+    <script src="./scripts/NumHeatSolv.js"> </script>
 </body>
+
 </html>
