--- a/index2.html
+++ b/index2.html
@@ -7,13 +7,13 @@
   <title>Курсовая работа 131-МКо</title>
   <link rel="stylesheet" href="./css/site.css">
   <link rel="icon" href="Img/favicon.ico">
-  <script src="./scripts/jscript1.js"> </script>
-  <script src="./scripts/Heat_2D_static.js"> </script>
+  
+
 </head>
 
 <nav class="menu">
 <li><a href="index.html">Игра</a></li>
-<li><a href="index2.html">Численное решение</a></li>
+<li><a href="index4.html">Численное решение</a></li>
 <li><a href="index3.html">1D Решение</a></li>
 <li><a href="#">Контакты</a></li>
 <li><div class="showtime"> Время <div id="clock"></div></li>
@@ -21,7 +21,7 @@
 </nav>
 
 <body>
-
+        <span id="ctlInfo"></span>
 <div class ="game">
   <canvas class="Heat" id="Heat_2D_canvas" width="600" height="600"></canvas>
 </div>
@@ -31,8 +31,8 @@
 
 </div>
 
-
-
+<script src="./scripts/jscript1.js"> </script>
+<script src="./scripts/Heat_2D_static.js"> </script>
 </body>
 
 
