--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="./css/site.css">
   <link rel="icon" href="Img/favicon.ico">
   
-  
 </head>
 
 <nav class="menu">
@@ -21,6 +20,7 @@
 </nav>
 
 <body>
+
   <table>
       <td><span id="ctlInfo"></span></td>
       <td>
@@ -50,9 +50,7 @@
   </tr>
 </table>
 
-  
-
-
+<script  src="./script.js"></script>
 <script src="./scripts/showtime.js"> </script>
 <script src="./scripts/Heat_2D.js"> </script>
 </body>
