--- a/index3.html
+++ b/index3.html
@@ -26,6 +26,7 @@
 
 
     <div id="presets">
+        <button class="knopki" id="clearbut">Очистить</button>
         <button class="knopki" id="sine">Синусоида</button>
         <button class="knopki"id="tan">Тангенс</button>
         <button class="knopki" id="square">Контакт</button>
@@ -36,8 +37,10 @@
 <br>
 
     <div id="options">
+        <h1>
         Скорость изменения : 
-        <br><br>
+        </h1>
+
         
         <div id="slidercontainer">
             <input type="range" class="range-style" id="speed" list="ticks " min="1" max="1000" step="1" value="2">
@@ -55,7 +58,7 @@
     <script src="./scripts/index3js.js"></script>
 
 
-
+<script src="./scripts/showtime.js"> </script>
 <script src="./scripts/jscript1.js"> </script>
 <script src="./scripts/activebutton.js"> </script>
 </body>
