--- a/index2.html
+++ b/index2.html
@@ -7,17 +7,21 @@
   <title>Курсовая работа 131-МКо</title>
   <link rel="stylesheet" href="./css/site.css">
   <link rel="icon" href="Img/favicon.ico">
-  
-
 </head>
 
 <nav class="menu">
-<li><a href="index.html">Игра</a></li>
-<li><a href="index4.html">Численное решение</a></li>
-<li><a href="index3.html">1D Решение</a></li>
-<li><a href="#">Контакты</a></li>
-<li><div class="showtime"> Время <div id="clock"></div></li>
-
+    <table>
+    <tr><td class ="menutable">
+        <li><a href="index.html">Игра</a></li>
+        <li><a href="index4.html">Численное решение</a></li>
+        <li><a href="index3.html">1D Решение</a></li>
+        <li><a href="#">Контакты</a></li>
+    </td></tr>
+    <tr><td>
+        <li><div class="showtime"> Время <div id="clock">
+        </div></li>
+    </td></tr>
+    </table>
 </nav>
 
 <body>
@@ -27,7 +31,7 @@
 </div>
 <div class ="by">
   <input  type="button" id="button_pause" value="Пауза/Старт"/>
-    <input type="button" id="button_clear" value="Очистить"/>
+  <input type="button" id="button_clear" value="Очистить"/>
 
 </div>
 
