--- a/index2.html
+++ b/index2.html
@@ -30,7 +30,7 @@
     <div style="float: left; margin-left: 10px;">
         <table class=""> 
                <td></td>
-               <th class="headesthead">Численное решение уравнения тепопроводности </th>
+               <th class="headesthead">Численное решение уравнения теплопроводности </th>
             <td></td>
             <tr>
                 <td  class="controls">
@@ -87,7 +87,6 @@
 
 
 
-    </div>
     <td>
         <span id="ctlInfo"><span class='loader'></span></span>
     </td>
@@ -128,8 +127,13 @@
     </td>
     <tr>
     
-    <td></td>
-               <th style="padding: 0px 40px 0 0;"><input class="knopki" type="button" id="button_clear" value="Очистить" oninput="config.autoPlay=true;"/></th>
+    <td class ="themetext">
+        Темы: 
+     <input class="knopki theme" type="button" id="theme1" value="1"/>
+    <input class="knopki theme" type="button" id="theme2" value="2"/>
+    <input class="knopki theme" type="button" id="theme3" value="3"/>
+    </td>
+               <th style="padding: 0px 40px 0 0;"><input class="knopki clearbut" type="button" id="button_clear" value="Очистить" oninput="config.autoPlay=true;"/></th>
     <td></td>
     </tr> 
 
