--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <li><a href="index3.html">1D Решение</a></li>
         <li><a href="#">Контакты</a></li>
     </td></tr>
-    <tr><td>
-        <li><div class="showtime"> Время <div id="clock">
+    <tr class="showtime"><td >
+        <li ><div > Время <div id="clock">
         </div></li>
     </td></tr>
     </table>
@@ -28,6 +28,7 @@
 
 <body>
 
+  
   <table class="TableGame">
     <tr>
       <td></td>
