--- a/index2.html
+++ b/index2.html
@@ -135,10 +135,12 @@
     </table>
     
     </div>
-   <script src="./scripts/showtime.js"> </script>
+    <script src="./scripts/showtime.js"> </script>
     <script src="./scripts/Heat_2D_static.js"> </script>
-     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
+    <script src="./scripts/NumHeatSolve.js"> </script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
     <script src="./scripts/slider.js"> </script>
+    
 </body>
 
 </html>
