--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <li><a href="index2.html">Численное решение</a></li>
         <li><a href="index3.html">1D Решение</a></li>
         <li><a href="#">Контакты</a></li>
-    </td></tr>
+            </td>
+    </tr>
     <tr class="showtime"><td >
-        <li ><div > Время <div id="clock">
-        </div></li>
+        <li ><div > Время <div id="clock"> 00:00:00</div></li>
     </td></tr>
     </table>
 </nav>
@@ -62,7 +62,7 @@
                     </label>
 
                     <label>Температуропроводность
-                    <form > <input type="text"  class="forms"  id="T_mmn" value="1">
+                    <form > <input type="text"  class="forms"  id="T_xi" value="1">
                     </form>
                     </label>
 
@@ -96,7 +96,7 @@
 
 </table>
 <table>
-  <tr class="control">
+  <tr class="controlrules">
 
     <td style="width: 30%;">Левая кнопка мыши - нагреть область</td>
 
@@ -108,5 +108,6 @@
 
 <script src="./scripts/showtime.js"> </script>
 <script src="./scripts/Heat_2D.js"> </script>
+<script src="./scripts/activebutton.js"> </script>
 </body>
 </html>
