--- a/index3.html
+++ b/index3.html
@@ -16,10 +16,10 @@
         <li><a href="index2.html">Численное решение</a></li>
         <li><a href="index3.html">1D Решение</a></li>
         <li><a href="#">Контакты</a></li>
-    </td></tr>
-    <tr><td>
-        <li><div class="showtime"> Время <div id="clock">
-        </div></li>
+            </td>
+    </tr>
+    <tr class="showtime"><td >
+        <li ><div > Время <div id="clock"> 00:00:00</div></li>
     </td></tr>
     </table>
 </nav>
