--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
   <table class="TableGame">
     <tr>
       <td></td>
-      <th class="headesthead">В разработке</th>
+      <th class="headesthead">Страница в разработке</th>
       <td></td>
     </tr>
     <tr>
       <td>
                     <label>
-                    Кадров в секунду
-                    <form> <input type="text" class="forms" id="fraps" value="2">
+                    Разрешение
+                    <form> <input type="text" class="forms" id="size" value="650"  pattern ="[5-9]|[1-9][0-9]{1,2}|1[0-4][0-9]{2}|1500">
                     </form>
                     </label>
 
@@ -52,17 +52,17 @@
 
                     <label>
                     Температура нажатия ЛКМ
-                    <form > <input type="text" class="forms"  id="T_mmx" value="10"  pattern ="[0-9]{0,3}">
+                    <form > <input type="text" class="forms"  id="T_mmx" value="10"  pattern ="|-100000|-[0-9]{0,4}|[0-9]{0,4}|10000">
                     </form>
                     </label>
 
                     <label>Температура нажатия ПКМ
-                    <form> <input type="text"  class="forms"  id="T_mmn" value="1">
+                    <form> <input type="text"  class="forms"  id="T_mmn" value="1" pattern ="|-10000|-[0-9]{0,4}|[0-9]{0,4}|10000">
                     </form>
                     </label>
 
                     <label>Температуропроводность
-                    <form > <input type="text"  class="forms"  id="T_xi" value="33">
+                    <form > <input type="text"  class="forms"  id="T_xi" value="33" pattern ="[0-9]|[1-3][0-9]|40">
                     </form>
                     </label>
 
