--- a/index2.html
+++ b/index2.html
@@ -14,10 +14,10 @@
 <nav class="menu">
     <table>
     <tr><td class ="menutable">
-        <li><a href="index.html">Игра</a></li>
+        
         <li><a href="index2.html">Численное решение</a></li>
         <li><a href="index3.html">1D Решение</a></li>
-        <li><a href="#">Контакты</a></li>
+        <li><a href="index4.html">Контакты</a></li>
             </td>
     </tr>
     <tr class="showtime"><td >
