--- a/index2.html
+++ b/index2.html
@@ -15,7 +15,7 @@
     <table>
     <tr><td class ="menutable">
         
-        <li><a href="index2.html">2D решение</a></li>
+        <li><a href="index2.html">2D Решение</a></li>
         <li><a href="index3.html">1D Решение</a></li>
         <li><a href="index4.html">Контакты</a></li>
             </td>
